FINNISH vlogin.php; ADD feature password hashed

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 # por hacer:
-- formulario de login
-- connect.php
++ formulario de login
++ connect.php
 - mlogin.php [ fn: getPasswordOf ]
 - GESTION DE $_SESSION['user']
 - inicio.php
