FINISH encrypt passwords

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 # por hacer:
 + formulario de login
 + connect.php
++ encrypt passwords
 - mlogin.php [ fn: getPasswordOf ]
 - GESTION DE $_SESSION['user']
 - inicio.php
