ADD Auth & OAuth; ADD bootstrap.css

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,8 @@
 + connect.php
 + encrypt passwords
 - mlogin.php [ fn: getPasswordOf ]
-- GESTION DE $_SESSION['user']
-- inicio.php
-- activar/desactivar envio de formulario
++ GESTION DE $_SESSION['user']
++ inicio.php
++ activar/desactivar envio de formulario
 
 
