start coding query to Redsys

--- a/TODO.txt
+++ b/TODO.txt
@@ -33,9 +33,9 @@ RESERVAS:
 + carrito agrega elementos
 + mostrar carrito
 + carrito elimina elementos
-- QUITAR CONSTANTES
-- INSERTS A DB
-- pago SIN REDSYS
++ QUITAR CONSTANTES
++ INSERTS A DB
++ pago SIN REDSYS
 - pago CON REDSYS
 - check in 
 ------------------------------------------------------
